--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "antd": "^5.17.3",
-        "react-icons": "^5.2.1"
+        "react-icons": "^5.2.1",
+        "react-slick": "^0.30.2",
+        "slick-carousel": "^1.8.1"
     }
 }
