--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "antd": "^5.17.3",
         "react-icons": "^5.2.1",
         "react-slick": "^0.30.2",
