--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "antd": "^5.17.3",
         "react-icons": "^5.2.1",
+        "react-input-mask": "^2.0.4",
         "react-slick": "^0.30.2",
         "slick-carousel": "^1.8.1"
     }
