--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@inertiajs/inertia": "^0.11.1",
         "antd": "^5.17.3",
+        "jspdf": "^2.5.1",
         "react-icons": "^5.2.1",
         "react-input-mask": "^2.0.4",
         "react-slick": "^0.30.2",
