--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "@inertiajs/inertia": "^0.11.1",
         "antd": "^5.18.3",
         "jspdf": "^2.5.1",
+        "react-countup": "^6.5.3",
         "react-icons": "^5.2.1",
         "react-input-mask": "^2.0.4",
         "react-slick": "^0.30.2",
+        "recharts": "^2.12.7",
         "slick-carousel": "^1.8.1"
     }
 }
